--- a/package.json
+++ b/package.json
@@ -1,33 +1,34 @@
 {
-  "name": "learning-app",
-  "version": "1.0.0",
-  "main": "node_modules/expo/AppEntry.js",
-  "scripts": {
-    "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
-    "web": "expo start --web",
-    "eject": "expo eject"
-  },
-  "dependencies": {
-    "@kaloraat/react-native-text": "^1.0.4",
-    "@react-native-async-storage/async-storage": "^1.17.3",
-    "@react-navigation/native": "^6.0.10",
-    "@react-navigation/native-stack": "^6.6.1",
-    "axios": "^0.26.1",
-    "expo": "~44.0.0",
-    "expo-status-bar": "~1.2.0",
-    "react": "17.0.1",
-    "react-dom": "17.0.1",
-    "react-native": "0.64.3",
-    "react-native-keyboard-aware-scroll-view": "^0.9.5",
-    "react-native-safe-area-context": "^4.2.4",
-    "react-native-screens": "^3.13.1",
-    "react-native-vector-icons": "^9.1.0",
-    "react-native-web": "0.17.1"
-  },
-  "devDependencies": {
-    "@babel/core": "^7.12.9"
-  },
-  "private": true
+    "name": "learning-app",
+    "version": "1.0.0",
+    "main": "node_modules/expo/AppEntry.js",
+    "scripts": {
+        "start": "expo start",
+        "android": "expo start --android",
+        "ios": "expo start --ios",
+        "web": "expo start --web",
+        "eject": "expo eject"
+    },
+    "dependencies": {
+        "@kaloraat/react-native-text": "^1.0.4",
+        "@react-native-async-storage/async-storage": "^1.17.3",
+        "@react-navigation/native": "^6.0.10",
+        "@react-navigation/native-stack": "^6.6.1",
+        "axios": "^0.26.1",
+        "expo": "~44.0.0",
+        "expo-status-bar": "~1.2.0",
+        "react": "17.0.1",
+        "react-dom": "17.0.1",
+        "react-native": "0.64.3",
+        "react-native-elements": "^3.4.2",
+        "react-native-keyboard-aware-scroll-view": "^0.9.5",
+        "react-native-safe-area-context": "^3.1.9",
+        "react-native-screens": "^3.13.1",
+        "react-native-vector-icons": "^9.1.0",
+        "react-native-web": "0.17.1"
+    },
+    "devDependencies": {
+        "@babel/core": "^7.12.9"
+    },
+    "private": true
 }
