--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@react-navigation/native-stack": "^6.6.1",
     "axios": "^0.26.1",
     "expo": "~44.0.0",
+    "expo-image-picker": "~12.0.1",
     "expo-status-bar": "~1.2.0",
     "react": "17.0.1",
     "react-dom": "17.0.1",
@@ -26,7 +27,7 @@
     "react-native-screens": "^3.13.1",
     "react-native-vector-icons": "^9.1.0",
     "react-native-web": "0.17.1",
-    "expo-image-picker": "~12.0.1"
+    "use-state-if-mounted": "^1.0.4"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
