--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "@react-native-async-storage/async-storage": "^1.17.3",
     "@react-navigation/native": "^6.0.10",
     "@react-navigation/native-stack": "^6.6.1",
+    "@uehreka/open-graph-scraper-react-native": "^1.1.0",
     "axios": "^0.26.1",
+    "buffer": "^6.0.3",
     "expo": "~44.0.0",
     "expo-image-picker": "~12.0.1",
     "expo-status-bar": "~1.2.0",
@@ -27,6 +29,7 @@
     "react-native-screens": "^3.13.1",
     "react-native-vector-icons": "^9.1.0",
     "react-native-web": "0.17.1",
+    "url-regex": "^5.0.0",
     "use-state-if-mounted": "^1.0.4"
   },
   "devDependencies": {
