--- a/package.json
+++ b/package.json
@@ -11,29 +11,30 @@
   },
   "dependencies": {
     "@kaloraat/react-native-text": "^1.0.4",
-    "@react-native-async-storage/async-storage": "^1.17.3",
+    "@react-native-async-storage/async-storage": "^1.17.5",
     "@react-navigation/native": "^6.0.10",
-    "@react-navigation/native-stack": "^6.6.1",
+    "@react-navigation/native-stack": "^6.6.2",
     "@uehreka/open-graph-scraper-react-native": "^1.1.0",
-    "axios": "^0.26.1",
+    "axios": "^0.27.2",
     "buffer": "^6.0.3",
-    "expo": "~44.0.0",
-    "expo-image-picker": "~12.0.1",
-    "expo-status-bar": "~1.2.0",
-    "react": "17.0.1",
-    "react-dom": "17.0.1",
-    "react-native": "0.64.3",
+    "expo": "^45.0.4",
+    "expo-image-picker": "~13.1.1",
+    "expo-status-bar": "~1.3.0",
+    "react": "18.1.0",
+    "react-dom": "18.1.0",
+    "react-native": "0.68.2",
     "react-native-elements": "^3.4.2",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
-    "react-native-safe-area-context": "^3.1.9",
+    "react-native-safe-area-context": "^4.2.5",
     "react-native-screens": "^3.13.1",
     "react-native-vector-icons": "^9.1.0",
-    "react-native-web": "0.17.1",
+    "react-native-web": "0.17.7",
+    "react-native-webview": "^11.18.2",
     "url-regex": "^5.0.0",
-    "use-state-if-mounted": "^1.0.4"
+    "use-state-if-mounted": "^1.0.7"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9"
+    "@babel/core": "^7.18.2"
   },
   "private": true
 }
